hphp/hack/test/typecheck/stricter_consts/interface_trait_class_interface_trait_class_1.bad.php.exp
File "interface_trait_class_interface_trait_class_1.bad.php", line 19, characters 13-13:
Class `B` does not correctly implement all required members  (Typing[4374])
  File "interface_trait_class_interface_trait_class_1.bad.php", line 19, characters 23-23:
  Some members are incompatible with those declared in type `A`
  File "interface_trait_class_interface_trait_class_1.bad.php", line 11, characters 16-21:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_trait_class_interface_trait_class_1.bad.php", line 5, characters 15-20:
  `ONCALL` inherited from `IA`
  File "interface_trait_class_interface_trait_class_1.bad.php", line 11, characters 16-21:
  conflicts with constant `ONCALL` inherited from `IB`.
